# vibcreg

./: .gitignore  LICENSE  README.md  environment.yaml  meta.yaml
backbone/: apc_encoder.py
pypilib/: .gitignore  README.md  example.py  pyproject.toml  setup.py  setup.py.bu
pypilib/vibcreg/: __init__.py  example.py  losses.py  modules.py
pypilib/vibcreg/losses/: invariance_loss.py  vibcreg_loss.py
vibcreg/: example_ucr.py  util.py
vibcreg/backbone/: causal_cnn.py  downsampling_cnn.py  onion - Copy (2).py  onion - Copy.py  onion.py  resnet.py  tcn.py
vibcreg/configs/: __init__.py  config_ptbxl_apc.yaml  config_ptbxl_barlow_twins.yaml  config_ptbxl_cpc.yaml  config_ptbxl_rand_init.yaml  config_ptbxl_simsiam.yaml  config_ptbxl_vbibcreg.yaml  config_ptbxl_vibcreg.yaml  config_ucr_apc.yaml  config_ucr_barlow_twins.yaml  config_ucr_rand_init.yaml  config_ucr_simsiam.yaml  config_ucr_vbibcreg.yaml  config_ucr_vibcreg.yaml  example_ucr.yaml
vibcreg/data/: download_data.py
vibcreg/evaluation/: evaluator.py  evaluator_ptbxl.py  evaluator_skeleton.py  evaluator_ucr.py
vibcreg/examples/: evaluations.py  example_ptbxl_apc.py  example_ptbxl_barlow_twins.py  example_ptbxl_cpc.py  example_ptbxl_rand_init.py  example_ptbxl_simsiam.py  example_ptbxl_vbibcreg.py  example_ptbxl_vibcreg.py  example_ucr.py  example_ucr_apc.py  example_ucr_barlow_twins.py  example_ucr_rand_init.py  example_ucr_simsiam.py  example_ucr_vbibcreg.py  example_ucr_vibcreg.py  learn_representations.py  ssl_eval_ptbxl.py  ssl_eval_ucr.py  ssl_eval_ucr_all.py  ssl_eval_uea_all.py
(+75 files in other folders)
