[tool.poetry]
name = "vibcreg"
version = "0.1.0"
description = "Simple-to-use implementation of vibcreg"
authors = ["ErlendA <erlend.aune.1983@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9"
torchvision = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
